--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dompurify": "^3.1.7",
 		"markdown-it": "^14.1.0",
-		"markdown-it-footnote": "^4.0.0"
+		"markdown-it-footnote": "^4.0.0",
+		"marked": "^14.1.3",
+		"stopword": "^3.1.1"
 	}
 }
