--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,26 +13,12 @@ ENV LANG nl_NL.UTF-8
 ENV LANGUAGE nl_NL:nl
 ENV LC_ALL nl_NL.UTF-8
 
-# RUN apt-get update && \
-#     apt-get install -y \
-#         locales && \
-#     rm -r /var/lib/apt/lists/*
-
-# RUN sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
-#     sed -i -e 's/# nl_NL.UTF-8 UTF-8/nl_NL.UTF-8 UTF-8/' /etc/locale.gen && \
-#     dpkg-reconfigure --frontend=noninteractive locales
-
-# ENV LANG nl_NL.UTF-8
-# ENV LANGUAGE nl_NL:nl
-# ENV LC_ALL nl_NL.UTF-8    
-
-WORKDIR /app
+WORKDIR /app/backend
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./app .
-
+COPY ./app ./app
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
