--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,13 +10,14 @@ services:
       - QDRANT_PORT=${QDRANT_PORT}
       - COHERE_API_KEY=${COHERE_API_KEY}
       - UVICORN_RELOAD=true
-      - MYSQL_DATABASE: ${MYSQL_DATABASE}
-      - MYSQL_USER: ${MYSQL_USER}
-      - MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     volumes:
-      - ./backend/app:/app
+      - ./backend:/app/backend
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    command: uvicorn app.main:fast_api_app --host 0.0.0.0 --port 8000 --reload=true
 
   frontend:
     env_file:
