--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,14 @@ services:
       - MYSQL_USER: ${MYSQL_USER}
       - MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
-      - ./backend/app:/app
+      - ./backend:/app/backend
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
       - mysql
     env_file:
       - .env
+    command: uvicorn app.main:fast_api_app --host 0.0.0.0 --port 8000 --reload=true
 
   frontend:
     build: ./frontend
