--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -50,10 +50,10 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
-    command: >
+    command:
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
-      --default-authentication-plugin=mysql_native_password
+      --default-authentication-plugin=caching_sha2_password
       --max-connections=1000
       --innodb-buffer-pool-size=1G
     healthcheck:
