--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -56,13 +56,13 @@ services:
     expose:
       - "3000"
     environment:
-      - VITE_PUBLIC_API_URL=/api
+      - VITE_PUBLIC_API_URL=${VITE_PUBLIC_API_URL}
     depends_on:
       - backend
     restart: unless-stopped
   
   qdrant:
-    image: qdrant/qdrant:latest
+    image: qdrant/qdrant:v1.11.3
     restart: unless-stopped
     container_name: qdrant
     ports:
@@ -76,7 +76,7 @@ services:
       - source: qdrant_config
         target: /qdrant/config/production.yaml
     volumes:
-      - ./qdrant_data:/qdrant/storage
+      - /var/lib/qdrant/storage:/qdrant/storage
 
   mysql:
     image: mysql:8.0
@@ -86,7 +86,7 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
-      - mysql_data:/var/lib/mysql
+      - /var/lib/mysql:/var/lib/mysql
     expose:
       - "3306"
     command: >
@@ -110,8 +110,6 @@ services:
 
 volumes:
   letsencrypt:
-  mysql_data:
-  qdrant_data:
   traefik: {}
   portainer_data: {}
 
