--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,7 +26,7 @@ services:
       - QDRANT_HOST=${QDRANT_HOST}
       - QDRANT_PORT=${QDRANT_PORT}
       - COHERE_API_KEY=${COHERE_API_KEY}
-      - DEVELOPMENT=${DEVELOPMENT}
+      - ENVIRONMENT=${ENVIRONMENT}
       - MYSQL_DATABASE: ${MYSQL_DATABASE}
       - MYSQL_USER: ${MYSQL_USER}
       - MYSQL_PASSWORD: ${MYSQL_PASSWORD}
@@ -76,7 +76,8 @@ services:
       - source: qdrant_config
         target: /qdrant/config/production.yaml
     volumes:
-      - /var/lib/qdrant/storage:/qdrant/storage
+      - qdrant_data:/qdrant/storage
+      # - /var/lib/qdrant/storage:/qdrant/storage
 
   mysql:
     image: mysql:8.0
@@ -112,6 +113,7 @@ volumes:
   letsencrypt:
   traefik: {}
   portainer_data: {}
+  qdrant_data: {}
 
 configs:
   qdrant_config:
