--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -22,10 +22,10 @@ WORKDIR /app
 
 # Copy built application from builder
 COPY --from=builder /app/build ./build
-COPY --from=builder /app/package.json ./package.json
+COPY --from=builder /app/package*.json ./
 
 # Install production dependencies only
-RUN npm ci --production
+RUN npm ci --omit=dev
 
 EXPOSE 3000
 
