--- a/traefik/traefik.prod.yml
+++ b/traefik/traefik.prod.yml
@@ -15,11 +15,11 @@ entryPoints:
     # https
     address: ':443'
 
-  mysql:
-    address: ':3306'
+  # mysql:
+  #   address: ':3306'
 
-  qdrant:
-    address: ':6333'
+  # qdrant:
+  #   address: ':6333'
 
   portainer:
     address: ':9000'
@@ -65,15 +65,15 @@ http:
         servers:
           - url: http://backend:8000
 
-    mysql:
-      loadBalancer:
-        servers:
-          - url: http://mysql:3306
+    # mysql:
+    #   loadBalancer:
+    #     servers:
+    #       - url: http://mysql:3306
 
-    qdrant:
-      loadBalancer:
-        servers:
-          - url: http://qdrant:6333
+    # qdrant:
+    #   loadBalancer:
+    #     servers:
+    #       - url: http://qdrant:6333
 
     portainer:
       loadBalancer:
