--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,8 +75,8 @@ services:
       - source: qdrant_config
         target: /qdrant/config/production.yaml
     volumes:
-      - qdrant_data:/qdrant/storage
-      # - /var/lib/qdrant/storage:/qdrant/storage
+      # - qdrant_data:/qdrant/storage
+      - /var/lib/qdrant/storage:/qdrant/storage
 
   mysql:
     image: mysql:8.0
@@ -114,7 +114,7 @@ volumes:
   letsencrypt:
   traefik: {}
   portainer_data: {}
-  qdrant_data: {}
+  # qdrant_data: {}
 
 configs:
   qdrant_config:
