--- a/traefik/Dockerfile.prod
+++ b/traefik/Dockerfile.prod
@@ -2,4 +2,4 @@ FROM traefik:3.2
 RUN mkdir -p /etc/traefik/acme \
   && touch /etc/traefik/acme/acme.json \
   && chmod 600 /etc/traefik/acme/acme.json
-COPY ./traefik/traefik.prod.yml /etc/traefik
+COPY ./traefik/traefik.yml /etc/traefik
