Attempt to fix css in production

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -5,6 +5,8 @@ WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
+COPY postcss.config.js ./
+COPY tailwind.config.js ./
 
 # Install dependencies
 RUN npm ci
