--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,13 @@
 		"@sveltejs/kit": "^2.7.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/eslint": "^9.6.0",
-		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
-		"postcss": "^8.4.47",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
-		"tailwindcss": "^3.4.13",
 		"vite": "^5.4.8"
 	},
 	"type": "module",
@@ -32,6 +29,9 @@
 		"markdown-it": "^14.1.0",
 		"markdown-it-footnote": "^4.0.0",
 		"marked": "^14.1.3",
-		"stopword": "^3.1.1"
+		"stopword": "^3.1.1",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
+		"tailwindcss": "^3.4.13"
 	}
 }
