--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -50,6 +50,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.prod
+      args:
+        - PUBLIC_API_URL=${PUBLIC_API_URL}
     expose:
       - "3000"
     environment:
