--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -14,6 +14,10 @@ RUN npm ci
 # Copy source code
 COPY . .
 
+# Add environment variable for build time
+ARG PUBLIC_API_URL
+ENV PUBLIC_API_URL=${PUBLIC_API_URL}
+
 # Build the application
 RUN npm run build
 
@@ -32,6 +36,8 @@ RUN npm ci --omit=dev
 EXPOSE 3000
 
 ENV NODE_ENV=production
+# Add runtime environment variable
+ENV PUBLIC_API_URL=${PUBLIC_API_URL}
 
 # Use @sveltejs/kit's node adapter
 CMD ["node", "./build"]
