--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -67,10 +67,10 @@ services:
     ports:
       - 6333:6333
       - 6334:6334
-    expose:
-      - 6333
-      - 6334
-      - 6335
+    # expose:
+    #   - 6333
+    #   - 6334
+    #   - 6335
     configs:
       - source: qdrant_config
         target: /qdrant/config/production.yaml
