--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,11 @@ services:
     command: /entrypoint.sh
     depends_on:
       - mysql
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   frontend:
     env_file:
@@ -53,12 +58,17 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - "3306:3306"
-    command:
+    command: >
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
       --default-authentication-plugin=caching_sha2_password
-      --max-connections=1000
-      --innodb-buffer-pool-size=1G
+      --max-connections=2000
+      --innodb-buffer-pool-size=4G
+      --innodb-thread-concurrency=16
+      --innodb-read-io-threads=8
+      --innodb-write-io-threads=8
+      --wait_timeout=300
+      --interactive_timeout=300
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
