--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -44,7 +44,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-    command: uvicorn app.main:fast_api_app --host 0.0.0.0 --port 8000 --workers 4
+    command: /entrypoint.sh
 
   frontend:
     build:
@@ -94,8 +94,13 @@ services:
       --character-set-server=utf8mb4
       --collation-server=utf8mb4_unicode_ci
       --default-authentication-plugin=caching_sha2_password
-      --max-connections=1000
-      --innodb-buffer-pool-size=1G
+      --max-connections=2000
+      --innodb-buffer-pool-size=4G
+      --innodb-thread-concurrency=16
+      --innodb-read-io-threads=8
+      --innodb-write-io-threads=8
+      --wait_timeout=300
+      --interactive_timeout=300
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 20s
