--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"autoprefixer": "^10.4.20",
 		"dompurify": "^3.1.7",
 		"markdown-it": "^14.1.0",
 		"markdown-it-footnote": "^4.0.0",
 		"marked": "^14.1.3",
-		"stopword": "^3.1.1",
-		"autoprefixer": "^10.4.20",
 		"postcss": "^8.4.47",
-		"tailwindcss": "^3.4.13"
+		"stopword": "^3.1.1",
+		"tailwindcss": "^3.4.13",
+		"typed.js": "^2.1.0"
 	}
 }
