--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.6.12",
 		"autoprefixer": "^10.4.20",
 		"dompurify": "^3.1.7",
 		"markdown-it": "^14.1.0",
