--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
+		"svelte-range-slider-pips": "^3.1.4",
 		"vite": "^5.4.8"
 	},
 	"type": "module",
@@ -28,11 +29,15 @@
 		"@floating-ui/dom": "^1.6.12",
 		"autoprefixer": "^10.4.20",
 		"dompurify": "^3.1.7",
+		"lodash-es": "^4.17.21",
 		"markdown-it": "^14.1.0",
 		"markdown-it-footnote": "^4.0.0",
 		"marked": "^14.1.3",
 		"postcss": "^8.4.47",
 		"stopword": "^3.1.1",
+		"svelte-headlessui": "^0.0.45",
+		"svelte-select": "^5.8.3",
+		"svelte-transition": "^0.0.17",
 		"tailwindcss": "^3.4.13",
 		"typed.js": "^2.1.0"
 	}
