--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
-		"svelte-range-slider-pips": "^3.1.4",
 		"vite": "^5.4.8"
 	},
 	"type": "module",
@@ -33,6 +32,7 @@
 		"markdown-it": "^14.1.0",
 		"markdown-it-footnote": "^4.0.0",
 		"marked": "^14.1.3",
+		"nouislider": "^15.8.1",
 		"postcss": "^8.4.47",
 		"stopword": "^3.1.1",
 		"svelte-headlessui": "^0.0.45",
