--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -26,7 +26,7 @@ certificatesResolvers:
 http:
   routers:
     frontend-router:
-      rule: 'Host(`bron-chat.linksmith.nl`)'
+      rule: 'Host(`chat.bron.live`)'
       entryPoints:
         - web-secure
       service: frontend
@@ -34,7 +34,7 @@ http:
         certResolver: letsencrypt
 
     backend-router:
-      rule: 'Host(`api.bron-chat.linksmith.nl`)'
+      rule: 'Host(`api.chat.bron.live`)'
       entryPoints:
         - web-secure
       service: backend
